Name:                   java-src
Version:                0.1.0
License:                BSD3
License-File:           LICENSE
Author:                 Niklas Broberg
Maintainer:             Niklas Broberg <niklas.broberg@chalmers.se>
Category:               Language
Synopsis:               Manipulating Java source: abstract syntax, lexer, parser, and pretty-printer
Description:            Java source manipulation.
                        .
Stability:              Experimental
Tested-with:            GHC==6.10.2
Build-Type:             Simple
Cabal-Version:          >= 1.2

Flag base4

Library
  Build-Tools:          happy >= 1.18.5, alex >= 2.3
  Build-Depends:        array >= 0.1, pretty >= 1.0, cpphs >= 1.3
  if flag(base4)
    Build-depends:      base >= 4 && < 5
    cpp-options:        -DBASE4
  else
    Build-depends:      base >= 3 && < 4


  Exposed-modules:      Language.Java.Lexer,
                        Language.Java.Syntax,
                        Language.Java.Parser3,
                        Language.Java.Pretty
  
  Other-modules:	