Name:                   language-java
Version:                0.2.1
License:                BSD3
License-File:           LICENSE
Author:                 Niklas Broberg
Maintainer:             Vincent Hanquez <vincent@snarc.org>
Category:               Language
Synopsis:               Manipulating Java source: abstract syntax, lexer, parser, and pretty-printer
Description:            Java source manipulation.
Homepage:               http://github.com/vincenthz/language-java
Stability:              Experimental
Build-Type:             Simple
Cabal-Version:          >= 1.6

Extra-Source-Files:
			test/abstract.java
			test/rawTypes.java
			test/test.java
			test/typeVarMembers.java
			test/LexerTest.hs
			Language/Java/Lexer.x

source-repository head
  type:                 git
  location:             git://github.com/vincenthz/language-java

Library
  Build-Tools:          alex >= 2.3
  Build-Depends:        base >= 4 && < 5
                      , array >= 0.1
                      , pretty >= 1.0
                      , cpphs >= 1.3
                      , parsec >= 3.0

  if impl(ghc < 7.6)
    Build-Depends:      syb

  Exposed-modules:      Language.Java.Lexer,
                        Language.Java.Syntax,
                        Language.Java.Parser,
                        Language.Java.Pretty
  
  Other-modules:	
